--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@angular/compiler": "~13.2.0",
     "@angular/core": "~13.2.0",
     "@angular/forms": "~13.2.0",
+    "@angular/localize": "^13.3.0",
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^12.0.0",
+    "@popperjs/core": "^2.11.4",
     "bootstrap": "^4.6.1",
     "jquery": "^3.6.0",
     "rxjs": "~7.5.0",
